# PirateGame

./: Changelog  LICENSE  README.md  Requirements
.github/workflows/: scorecard.yml
PirateGame/: CMakeLists.txt  main.cpp
